public/css/emu_landing_page_d.css
/*!
 * Start Bootstrap - Landing Page Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

body,
html {
    width: 100%;
    height: 100%;
}

body{
    padding-top: 40px;  If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! 
    padding-bottom: 50px;
    text-align: center;
    color: #f8f8f8;
    background: url("/resources/emu/bannerBG_overlay.jpg") no-repeat center center;
    background-size: cover;
    background-position: top;
}


body,
h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
    font-weight: 700;
}

.header {
  height: 8%;
  background: -webkit-linear-gradient(#7cc139, #ace74e); /* For Safari 5.1 to 6.0 */
  background: -o-linear-gradient(#7cc139, #ace74e); /* For Opera 11.1 to 12.0 */
  background: -moz-linear-gradient(#7cc139, #ace74e); /* For Firefox 3.6 to 15 */
  background: linear-gradient(#7cc139, #ace74e); /* Standard syntax */
  /*background-color: #ace74e;*/
}

.zindexten {
    z-index: 10;
}
.zindextwenty {
    z-index: 20;
}

.footer-lg {
  position: relative;
    height: 80px;
  background-image: linear-gradient(0deg, #b4ec51 0%, #429321 100%);
  bottom: 80px;
  z-index: 1;
}

.footer-xs {
  position: relative;
    height: 300px;
  background-image: linear-gradient(0deg, #b4ec51 0%, #429321 100%);
  bottom: 300px;
  z-index: 1;
}

.description {
  margin-left: 0px;
  font-size: 18px;
  color: #4A4A4A;
  line-height: 21px;
}

.topnav {
    font-size: 14px; 
}

li > a {
    color: #ace74e;
}

.lead {
    font-size: 18px;
    font-weight: 400;
}

.intro-header {
    padding-top: 35px;
}

.intro-message {
    position: relative;
    padding-top: 5%;
    padding-bottom: 5%;
}

.intro-message > h1 {
    margin: 0;
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
    font-size: 5em;
}

.intro-divider {
    width: 400px;
    border-top: 1px solid #f8f8f8;
    border-bottom: 1px solid rgba(0,0,0,0.2);
}

.intro-message > h3 {
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
}

@media(max-width:767px) {
    .intro-message {
        padding-bottom: 15%;
    }

    .intro-message > h1 {
        font-size: 3em;
    }

    ul.intro-social-buttons > li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.intro-social-buttons > li:last-child {
        margin-bottom: 0;
    }

    .intro-divider {
        width: 100%;
    }
}

.network-name {
    text-transform: uppercase;
    font-size: 14px;
    font-weight: 400;
    letter-spacing: 2px;
}

.content-section-a {
    padding: 50px 0;
    background-color: #f8f8f8;
}

.content-section-b {
    padding: 50px 0;
    border-top: 1px solid #e7e7e7;
    border-bottom: 1px solid #e7e7e7;
}

.section-heading {
    margin-top: 10px;
    margin-bottom: 10px;
}

.section-heading-spacer {
    float: left;
    width: 200px;
    border-top: 3px solid #e7e7e7;
}

.banner {
    padding: 100px 0;
    color: #f8f8f8;
    background: url(../img/banner-bg.jpg) no-repeat center center;
    background-size: cover;
}

.banner h2 {
    margin: 0;
    text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
    font-size: 3em;
}

.banner ul {
    margin-bottom: 0;
}

.banner-social-buttons {
    float: right;
    margin-top: 0;
}

@media(max-width:1199px) {
    ul.banner-social-buttons {
        float: left;
        margin-top: 15px;
    }
}

@media(max-width:767px) {
    .banner h2 {
        margin: 0;
        text-shadow: 2px 2px 3px rgba(0,0,0,0.6);
        font-size: 3em;
    }

    ul.banner-social-buttons > li {
        display: block;
        margin-bottom: 20px;
        padding: 0;
    }

    ul.banner-social-buttons > li:last-child {
        margin-bottom: 0;
    }
}

footer {
    padding: 50px 0;
    background-color: #f8f8f8;
}

p.copyright {
    margin: 15px 0 0;
}

